--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@hookform/resolvers": "^5.2.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.1.0",
-    "jspdf": "^3.0.1",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.539.0",
     "next": "15.4.6",
     "next-pwa": "^5.6.0",
